--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title: Poole
+title: PrepaBear
 tagline: The Jekyll Butler
 url: https://getpoole.com
 paginate: 1
@@ -34,7 +34,6 @@ sass:
 # Specify the author for blog posts
 author:
   name: Mark Otto
-  url: https://twitter.com/mdo
   email: markdotto@gmail.com
 
 # Custom vars
